--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="%BASE_URL%icono.png" />
+    <link rel="apple-touch-icon" href="%BASE_URL%icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contaduria-web</title>
   </head>
